# trail

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Spline.cpp  Spline.h  library.cpp  library.h  utils.cpp  utils.h
lib/cmake/: FindEigen3.cmake
src/: Robot.cpp  RobotTrajectory.cpp  RobotTrajectory.h  Spline.cpp  Spline.h  Waypoint.cpp  Waypoint.h  trail-cli.cpp  utils.cpp  utils.h
src/outputs/: CSVOutput.h  DesmosOutput.h  IOutput.h
src/trail/: MotionProfile.cpp  MotionProfile.h  Robot.cpp  Robot.h  RobotOrigins.cpp  RobotOrigins.h  RobotTrajectory.cpp  RobotTrajectory.h  Spline.cpp  Spline.h  Waypoint.cpp  Waypoint.h  utils.cpp  utils.h
test/: main.cpp
